# RLInfraWiki

./: AGENTS.md  CLAUDE.md  Makefile  README.md  SKILL.md  index.md  pyproject.toml  requirements.txt
artifacts/: README.md
candidates/: areal.yaml  blogs.yaml  deepspeed.yaml  issues.yaml  megatron-lm.yaml  papers.yaml  ray.yaml  roll.yaml  sglang.yaml  slime.yaml  verl.yaml  vllm.yaml
data/: algorithm_taxonomy.yaml  aliases.yaml  canonical_terms.yaml  capability_taxonomy.yaml  component_taxonomy.yaml  context_bundle_schema.yaml  failure_modes.yaml  framework_matrix.yaml  interface_contracts.yaml  refresh_cutoff.yaml  relation_types.yaml  repo_registry.yaml  retrieval_policy.yaml  source_docs.yaml  source_repos.yaml  source_roots.example.yaml  tags.yaml  tool_versions.yaml  validation_patterns.yaml  version_claims.yaml
docs/: rollout-backend-selection-code-evidence-acceptance.md
queries/: by-adapter-task.md  by-algorithm.md  by-backend.md  by-capability.md  by-component.md  by-deployment-mode.md  by-failure-mode.md  by-framework.md  by-interface.md  by-pattern.md  by-problem.md  by-relation.md  by-risk.md  by-source.md  by-validation.md  cross-framework-lessons.md  generic-to-framework.md  topic-map.md
references/: confidence-levels.md  controlled-vocabulary.md  design-playbook-index.md  examples.md  page-authoring-guide.md  primer.md  schema.md  source-policy.md
schemas/: candidate.schema.json  claim.schema.json  decision_record.schema.json  evidence.schema.json  goal.schema.json  goal_status.schema.json  goal_update.schema.json  performance_claim.schema.json  (+10 more)
(+207 files in other folders)
